[project]
name = "introductiontolangchain"
version = "0.1.0"
description = "A modular planet question-answering system built with LangChain, Chroma, and Groq."
requires-python = ">=3.11,<3.12"
dependencies = [
    "chromadb>=1.5.5",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.23",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]
